@@ -85,7 +85,7 @@ public class CmdShow extends FCommand {
         if (!faction.isNormal()) {
             String tag = faction.getTag(context.fPlayer);
             // send header and that's all
-            String header = show.get(0);
+            String header = show.getFirst();
             if (FactionTag.HEADER.foundInString(header)) {
                 context.msg(plugin.txt().titleize(tag));
             } else {
@@ -110,7 +110,7 @@ public class CmdShow extends FCommand {
             if (!parsed.contains("{notFrozen}") && !parsed.contains("{notPermanent}")) {
                 if (parsed.contains("{ig}")) {
                     // replaces all variables with no home TL
-                    parsed = parsed.substring(0, parsed.indexOf("{ig}")) + TL.COMMAND_SHOW_NOHOME.toString();
+                    parsed = parsed.substring(0, parsed.indexOf("{ig}")) + TL.COMMAND_SHOW_NOHOME;
                 }
                 parsed = parsed.replace("%", ""); // Just in case it got in there before we disallowed it.
                 messageList.add(parsed);
